Add enum for Locus Energy granularity.